--- a/project-fosm-carto.json
+++ b/project-fosm-carto.json
@@ -4,7 +4,7 @@
             "Datasource.type": "postgis"
         },
         "then": {
-            "Datasource.dbname": "gis",
+            "Datasource.dbname": "gistwo",
             "Datasource.user": "www-data",
             "Datasource.host": "localhost"
         }
