update to latest cartocc

--- a/project-fosm-carto.json
+++ b/project-fosm-carto.json
@@ -5,8 +5,7 @@
         },
         "then": {
             "Datasource.dbname": "gistwo",
-            "Datasource.user": "www-data",
-            "Datasource.host": "localhost"
+            "Datasource.user": "www-data"
         }
     }
 ]
